--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -251,6 +251,7 @@ allow 176.121.81.51;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.58.124.159;
+allow 176.65.134.61;
 allow 176.65.143.138;
 allow 176.65.144.142;
 allow 176.65.144.94;
@@ -1004,7 +1005,9 @@ allow 23.137.254.137;
 allow 23.151.8.8;
 allow 23.153.248.33;
 allow 23.153.248.34;
+allow 23.154.177.10;
 allow 23.154.177.11;
+allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
@@ -1354,6 +1357,7 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1852,6 +1856,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
