--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -26,7 +26,6 @@ deny 104.244.73.190;
 deny 104.244.73.193;
 deny 104.244.73.43;
 deny 104.244.74.173;
-deny 104.244.74.229;
 deny 104.244.74.23;
 deny 104.244.74.97;
 deny 104.244.75.140;
@@ -59,6 +58,7 @@ deny 107.174.83.58;
 deny 107.175.31.193;
 deny 107.189.10.175;
 deny 107.189.10.20;
+deny 107.189.1.111;
 deny 107.189.11.111;
 deny 107.189.11.113;
 deny 107.189.1.160;
@@ -125,6 +125,7 @@ deny 109.199.101.106;
 deny 109.199.101.134;
 deny 109.199.105.142;
 deny 109.228.160.190;
+deny 109.248.11.6;
 deny 109.69.67.17;
 deny 109.70.100.1;
 deny 109.70.100.2;
@@ -256,6 +257,7 @@ deny 176.65.143.138;
 deny 176.65.144.142;
 deny 176.65.144.94;
 deny 176.97.114.202;
+deny 178.162.175.5;
 deny 178.162.197.91;
 deny 178.17.170.144;
 deny 178.17.171.102;
@@ -1002,7 +1004,6 @@ deny 23.137.253.110;
 deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.137;
-deny 23.151.8.8;
 deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.154.177.10;
@@ -1073,7 +1074,6 @@ deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
 deny 2602:f704:10::1;
-deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
@@ -1155,7 +1155,6 @@ deny 2605:6400:30:f858:2704:73e1:7085:12ef;
 deny 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 deny 2605:6400:30:f8d5::1;
 deny 2605:6400:30:f8da:2b2:a293:30ad:506d;
-deny 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 deny 2605:6400:30:f920:f523:28ef:3617:8b86;
 deny 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 deny 2605:6400:40:fe09::2;
@@ -1606,6 +1605,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:3f23::1;
 deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
@@ -1621,6 +1621,7 @@ deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
+deny 2a0d:c580:1:3:95::1;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1926,6 +1927,7 @@ deny 81.181.104.22;
 deny 8.208.26.177;
 deny 8.209.106.19;
 deny 82.118.248.205;
+deny 82.153.138.17;
 deny 82.197.182.161;
 deny 82.221.128.191;
 deny 82.221.131.5;
