--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -26,6 +26,7 @@ allow 104.244.73.190;
 allow 104.244.73.193;
 allow 104.244.73.43;
 allow 104.244.74.173;
+allow 104.244.74.229;
 allow 104.244.74.23;
 allow 104.244.74.97;
 allow 104.244.75.140;
@@ -125,7 +126,6 @@ allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
 allow 109.228.160.190;
-allow 109.248.11.6;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -1145,6 +1145,8 @@ allow 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
 allow 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
 allow 2605:6400:30:f753:891d:ee77:e97c:741a;
+allow 2605:6400:30:f77f:4eaa:1301:74eb:f318;
+allow 2605:6400:30:f77f:f41c:2bce:7d61:210c;
 allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 allow 2605:6400:30:f7ca::2;
@@ -1155,6 +1157,7 @@ allow 2605:6400:30:f858:2704:73e1:7085:12ef;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
+allow 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
@@ -1605,8 +1608,6 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
-allow 2a0d:8140:1fff:3f23::1;
-allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1621,7 +1622,6 @@ allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:bbc7:0:1::3d5;
 allow 2a0d:bbc7:0:1::7f;
 allow 2a0d:c2c0:1:4::2;
-allow 2a0d:c580:1:3:95::1;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1750,7 +1750,6 @@ allow 45.128.133.242;
 allow 45.130.60.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1927,7 +1926,6 @@ allow 81.181.104.22;
 allow 8.208.26.177;
 allow 8.209.106.19;
 allow 82.118.248.205;
-allow 82.153.138.17;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
