--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -205,6 +205,8 @@ deny 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 deny 2605:6400:30:f623:5a78:29a6:8492:27b0;
 deny 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
 deny 2605:6400:30:f753:891d:ee77:e97c:741a;
+deny 2605:6400:30:f77f:4eaa:1301:74eb:f318;
+deny 2605:6400:30:f77f:f41c:2bce:7d61:210c;
 deny 2605:6400:30:f78b::2;
 deny 2605:6400:30:f7c0:8511:b113:ca11:9baa;
 deny 2605:6400:30:f7ca::2;
@@ -215,6 +217,7 @@ deny 2605:6400:30:f858:2704:73e1:7085:12ef;
 deny 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 deny 2605:6400:30:f8d5::1;
 deny 2605:6400:30:f8da:2b2:a293:30ad:506d;
+deny 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 deny 2605:6400:30:f920:f523:28ef:3617:8b86;
 deny 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 deny 2605:6400:40:fe09::2;
@@ -664,8 +667,6 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
-deny 2a0d:8140:1fff:3f23::1;
-deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -680,7 +681,6 @@ deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
-deny 2a0d:c580:1:3:95::1;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
