--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -9,7 +9,6 @@ allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:2:9161::1;
 allow 2001:41d0:304:200::3348;
 allow 2001:41d0:304:200::3ea4;
-allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:304:300::5bb5;
 allow 2001:41d0:304:300::74bf;
 allow 2001:41d0:601:1100::6524;
@@ -203,6 +202,7 @@ allow 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 allow 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
 allow 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
+allow 2605:6400:30:f753:891d:ee77:e97c:741a;
 allow 2605:6400:30:f77f:4eaa:1301:74eb:f318;
 allow 2605:6400:30:f77f:f41c:2bce:7d61:210c;
 allow 2605:6400:30:f78b::2;
@@ -662,7 +662,6 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
-allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
