--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -56,6 +56,7 @@ set_real_ip_from 107.174.45.53;
 set_real_ip_from 107.174.45.55;
 set_real_ip_from 107.174.83.58;
 set_real_ip_from 107.175.31.193;
+set_real_ip_from 107.189.10.175;
 set_real_ip_from 107.189.10.20;
 set_real_ip_from 107.189.1.111;
 set_real_ip_from 107.189.11.111;
@@ -712,7 +713,7 @@ set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.144.178.185;
 set_real_ip_from 198.144.178.187;
-set_real_ip_from 198.167.206.158;
+set_real_ip_from 198.167.206.249;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -748,7 +749,6 @@ set_real_ip_from 2001:41d0:1008:20d1::1;
 set_real_ip_from 2001:41d0:2:9161::1;
 set_real_ip_from 2001:41d0:304:200::3348;
 set_real_ip_from 2001:41d0:304:200::3ea4;
-set_real_ip_from 2001:41d0:304:200::9dce;
 set_real_ip_from 2001:41d0:304:300::5bb5;
 set_real_ip_from 2001:41d0:304:300::74bf;
 set_real_ip_from 2001:41d0:601:1100::6524;
@@ -1141,6 +1141,7 @@ set_real_ip_from 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 set_real_ip_from 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 set_real_ip_from 2605:6400:30:f623:5a78:29a6:8492:27b0;
 set_real_ip_from 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
+set_real_ip_from 2605:6400:30:f753:891d:ee77:e97c:741a;
 set_real_ip_from 2605:6400:30:f77f:4eaa:1301:74eb:f318;
 set_real_ip_from 2605:6400:30:f77f:f41c:2bce:7d61:210c;
 set_real_ip_from 2605:6400:30:f78b::2;
@@ -1601,7 +1602,6 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
-set_real_ip_from 2a0d:8140:1fff:4a9a::1;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -1744,7 +1744,6 @@ set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.130.60.248;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
-set_real_ip_from 45.137.99.14;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.178;
