Update lists at 20250313-0000

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -749,6 +749,7 @@ allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:2:9161::1;
 allow 2001:41d0:304:200::3348;
 allow 2001:41d0:304:200::3ea4;
+allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:304:300::5bb5;
 allow 2001:41d0:304:300::74bf;
 allow 2001:41d0:601:1100::6524;
@@ -1144,6 +1145,7 @@ allow 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
 allow 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
 allow 2605:6400:30:f753:891d:ee77:e97c:741a;
+allow 2605:6400:30:f77f:f41c:2bce:7d61:210e;
 allow 2605:6400:30:f77f:f41c:2bce:7d61:f318;
 allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
@@ -1286,6 +1288,7 @@ allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
 allow 2a01:4f8:c012:6ab1::1;
 allow 2a01:4f9:2b:75d::124:148;
+allow 2a01:4ff:f0:d369::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1633,7 +1636,6 @@ allow 2a0e:4005:1002:ffff:185:40:4:38;
 allow 2a0e:4005:1002:ffff:185:40:4:44;
 allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
-allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc0:0:8::a84e;
 allow 2a0e:bfc0:0:d::d927;
@@ -1739,7 +1741,6 @@ allow 38.242.254.131;
 allow 38.97.116.244;
 allow 40.160.3.1;
 allow 45.11.183.87;
-allow 45.11.229.132;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1844,6 +1845,7 @@ allow 51.15.59.15;
 allow 51.195.166.174;
 allow 51.222.142.67;
 allow 51.38.225.46;
+allow 5.161.97.125;
 allow 51.79.24.181;
 allow 51.79.30.185;
 allow 51.81.222.62;
@@ -1976,7 +1978,6 @@ allow 91.219.236.91;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
-allow 92.246.138.145;
 allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.185.165.211;
