--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -9,6 +9,7 @@ deny 2001:41d0:1008:20d1::1;
 deny 2001:41d0:2:9161::1;
 deny 2001:41d0:304:200::3348;
 deny 2001:41d0:304:200::3ea4;
+deny 2001:41d0:304:200::9dce;
 deny 2001:41d0:304:300::5bb5;
 deny 2001:41d0:304:300::74bf;
 deny 2001:41d0:601:1100::6524;
@@ -204,6 +205,7 @@ deny 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 deny 2605:6400:30:f623:5a78:29a6:8492:27b0;
 deny 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
 deny 2605:6400:30:f753:891d:ee77:e97c:741a;
+deny 2605:6400:30:f77f:f41c:2bce:7d61:210e;
 deny 2605:6400:30:f77f:f41c:2bce:7d61:f318;
 deny 2605:6400:30:f78b::2;
 deny 2605:6400:30:f7c0:8511:b113:ca11:9baa;
@@ -345,6 +347,7 @@ deny 2a00:c70:1:185:246:84:179:1;
 deny 2a01:270:9847::1;
 deny 2a01:4f8:c012:6ab1::1;
 deny 2a01:4f9:2b:75d::124:148;
+deny 2a01:4ff:f0:d369::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
@@ -692,7 +695,6 @@ deny 2a0e:4005:1002:ffff:185:40:4:38;
 deny 2a0e:4005:1002:ffff:185:40:4:44;
 deny 2a0e:4005:1002:ffff:185:40:4:64;
 deny 2a0e:4005:1002:ffff:185:40:4:92;
-deny 2a0e:97c0:3e3:b6::1;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc0:0:8::a84e;
 deny 2a0e:bfc0:0:d::d927;
