--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -124,6 +124,7 @@ allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
 allow 109.228.160.190;
+allow 109.248.11.6;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -139,8 +140,8 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
+allow 114.158.253.93;
 allow 114.35.245.150;
-allow 118.0.150.195;
 allow 118.163.74.160;
 allow 121.127.37.151;
 allow 121.78.28.166;
@@ -150,6 +151,7 @@ allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
+allow 130.193.15.79;
 allow 135.225.96.187;
 allow 136.244.111.163;
 allow 138.59.18.110;
@@ -260,7 +262,9 @@ allow 176.97.114.202;
 allow 178.162.175.5;
 allow 178.162.197.91;
 allow 178.17.170.144;
+allow 178.17.170.23;
 allow 178.17.171.102;
+allow 178.17.174.14;
 allow 178.17.174.164;
 allow 178.175.148.209;
 allow 178.175.148.246;
@@ -698,7 +702,6 @@ allow 194.53.137.156;
 allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
-allow 195.240.214.116;
 allow 195.47.238.176;
 allow 195.47.238.177;
 allow 195.47.238.178;
@@ -1280,8 +1283,10 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
+allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
+allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:4d80::1;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
@@ -1621,6 +1626,7 @@ allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:bbc7:0:1::3d5;
 allow 2a0d:bbc7:0:1::7f;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0d:c580:1:3:95::1;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
