--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -124,6 +124,7 @@ deny 109.199.101.106;
 deny 109.199.101.134;
 deny 109.199.105.142;
 deny 109.228.160.190;
+deny 109.248.11.6;
 deny 109.69.67.17;
 deny 109.70.100.1;
 deny 109.70.100.2;
@@ -139,8 +140,8 @@ deny 109.70.100.69;
 deny 109.70.100.70;
 deny 109.70.100.71;
 deny 113.20.31.38;
+deny 114.158.253.93;
 deny 114.35.245.150;
-deny 118.0.150.195;
 deny 118.163.74.160;
 deny 121.127.37.151;
 deny 121.78.28.166;
@@ -150,6 +151,7 @@ deny 128.127.180.156;
 deny 128.31.0.13;
 deny 130.193.10.21;
 deny 130.193.15.186;
+deny 130.193.15.79;
 deny 135.225.96.187;
 deny 136.244.111.163;
 deny 138.59.18.110;
@@ -260,7 +262,9 @@ deny 176.97.114.202;
 deny 178.162.175.5;
 deny 178.162.197.91;
 deny 178.17.170.144;
+deny 178.17.170.23;
 deny 178.17.171.102;
+deny 178.17.174.14;
 deny 178.17.174.164;
 deny 178.175.148.209;
 deny 178.175.148.246;
@@ -698,7 +702,6 @@ deny 194.53.137.156;
 deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
-deny 195.240.214.116;
 deny 195.47.238.176;
 deny 195.47.238.177;
 deny 195.47.238.178;
@@ -1280,8 +1283,10 @@ deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
 deny 2a00:1dc0:caff:138::94d2;
+deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
+deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:4d80::1;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
@@ -1621,6 +1626,7 @@ deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
+deny 2a0d:c580:1:3:95::1;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
