Update lists at 20250316-0900

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -232,6 +232,7 @@ deny 2607:5300:61:785::;
 deny 2607:5300:61:785:1:2:3:4;
 deny 2607:f130:0:ed:216:3cff:febd:3b42;
 deny 2607:f530:8002::19;
+deny 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 deny 2620:7:6001::101;
 deny 2620:7:6001::102;
 deny 2620:7:6001::103;
