--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -225,6 +225,7 @@ allow 172.104.186.73;
 allow 172.104.243.155;
 allow 172.105.174.195;
 allow 172.232.141.150;
+allow 172.233.57.187;
 allow 172.233.82.41;
 allow 172.234.228.174;
 allow 172.245.251.232;
@@ -969,6 +970,7 @@ allow 209.141.34.15;
 allow 209.141.37.94;
 allow 209.141.40.68;
 allow 209.141.45.141;
+allow 209.141.45.81;
 allow 209.141.46.203;
 allow 209.141.51.180;
 allow 209.141.54.203;
@@ -1013,7 +1015,6 @@ allow 23.154.177.29;
 allow 23.154.177.30;
 allow 23.154.177.31;
 allow 23.155.8.104;
-allow 23.184.48.13;
 allow 23.184.48.254;
 allow 23.184.48.78;
 allow 23.191.200.10;
@@ -1062,6 +1063,7 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c03::f03c:95ff:fef5:a5a5;
 allow 2600:3c09::f03c:95ff:fe2d:cc40;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
+allow 2600:3c0e::f03c:95ff:feaa:89b0;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
@@ -1072,7 +1074,6 @@ allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
-allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:18:f84a::1;
 allow 2602:fc24:19:1c9::1;
@@ -1096,6 +1097,8 @@ allow 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
 allow 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 allow 2605:6400:20:482:3920:1829:1839:1293;
 allow 2605:6400:20:be7::1;
+allow 2605:6400:20:c26:5163:253e:1ef6:d887;
+allow 2605:6400:20:c26:5163:253e:1ef6:d896;
 allow 2605:6400:20:ff9::1;
 allow 2605:6400:30:e948:4cee:191b:1e55:25b3;
 allow 2605:6400:30:ea52:4246:fb82:f36c:8ede;
@@ -1863,6 +1866,7 @@ allow 51.68.189.231;
 allow 51.79.24.181;
 allow 51.79.30.185;
 allow 51.81.222.62;
+allow 5.181.80.107;
 allow 51.89.136.168;
 allow 51.91.18.151;
 allow 5.196.95.34;
