--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -150,7 +150,6 @@ deny 128.31.0.13;
 deny 130.193.10.21;
 deny 130.193.15.186;
 deny 130.193.15.79;
-deny 135.225.96.187;
 deny 136.244.111.163;
 deny 138.59.18.110;
 deny 139.99.172.11;
@@ -247,6 +246,7 @@ deny 176.65.134.61;
 deny 176.65.144.142;
 deny 176.65.144.94;
 deny 176.97.114.202;
+deny 177.149.146.25;
 deny 178.162.175.5;
 deny 178.162.197.91;
 deny 178.17.170.144;
@@ -665,16 +665,15 @@ deny 193.189.100.203;
 deny 193.189.100.204;
 deny 193.189.100.205;
 deny 193.189.100.206;
-deny 193.218.118.133;
-deny 193.218.118.153;
-deny 193.218.118.157;
+deny 193.218.118.135;
+deny 193.218.118.158;
 deny 193.218.118.160;
 deny 193.218.118.173;
 deny 193.218.118.178;
 deny 193.218.118.182;
-deny 193.218.118.188;
-deny 193.218.118.56;
-deny 193.218.118.72;
+deny 193.218.118.196;
+deny 193.218.118.38;
+deny 193.218.118.52;
 deny 193.218.118.89;
 deny 193.237.221.228;
 deny 193.239.232.102;
@@ -1402,6 +1401,7 @@ deny 2a09:61c0::20;
 deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
+deny 2a09:6301:0:71:a067:d2f9:48b9:db3f;
 deny 2a09:b280:fe01:61::a;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:7140:6:1:5054:ff:fed8:5956;
@@ -1605,6 +1605,7 @@ deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:8140:1fff:22d0::1;
 deny 2a0d:8140:1fff:395e::1;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1667,7 +1668,6 @@ deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::182;
-deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:8605:d341:b954:fc51;
 deny 2a0f:e586:f:f:9405:a52b:796f:aff2;
 deny 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
@@ -1756,6 +1756,7 @@ deny 45.130.60.248;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.137.99.10;
+deny 45.137.99.14;
 deny 45.137.99.216;
 deny 45.138.16.107;
 deny 45.138.16.113;
@@ -1925,6 +1926,7 @@ deny 72.235.129.116;
 deny 74.82.47.194;
 deny 77.48.28.239;
 deny 77.81.247.72;
+deny 77.90.46.26;
 deny 78.142.18.219;
 deny 78.159.131.96;
 deny 79.124.60.174;
