--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -150,7 +150,6 @@ allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
-allow 135.225.96.187;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
@@ -247,6 +246,7 @@ allow 176.65.134.61;
 allow 176.65.144.142;
 allow 176.65.144.94;
 allow 176.97.114.202;
+allow 177.149.146.25;
 allow 178.162.175.5;
 allow 178.162.197.91;
 allow 178.17.170.144;
@@ -665,16 +665,15 @@ allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
-allow 193.218.118.133;
-allow 193.218.118.153;
-allow 193.218.118.157;
+allow 193.218.118.135;
+allow 193.218.118.158;
 allow 193.218.118.160;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
-allow 193.218.118.188;
-allow 193.218.118.56;
-allow 193.218.118.72;
+allow 193.218.118.196;
+allow 193.218.118.38;
+allow 193.218.118.52;
 allow 193.218.118.89;
 allow 193.237.221.228;
 allow 193.239.232.102;
@@ -1402,6 +1401,7 @@ allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
+allow 2a09:6301:0:71:a067:d2f9:48b9:db3f;
 allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:7140:6:1:5054:ff:fed8:5956;
@@ -1605,6 +1605,7 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1667,7 +1668,6 @@ allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::182;
-allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:8605:d341:b954:fc51;
 allow 2a0f:e586:f:f:9405:a52b:796f:aff2;
 allow 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
@@ -1756,6 +1756,7 @@ allow 45.130.60.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.99.10;
+allow 45.137.99.14;
 allow 45.137.99.216;
 allow 45.138.16.107;
 allow 45.138.16.113;
@@ -1925,6 +1926,7 @@ allow 72.235.129.116;
 allow 74.82.47.194;
 allow 77.48.28.239;
 allow 77.81.247.72;
+allow 77.90.46.26;
 allow 78.142.18.219;
 allow 78.159.131.96;
 allow 79.124.60.174;
