--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -551,7 +551,6 @@ deny 185.246.189.99;
 deny 185.246.84.179;
 deny 185.247.184.105;
 deny 185.247.184.33;
-deny 185.247.226.175;
 deny 185.252.232.218;
 deny 185.254.196.141;
 deny 185.34.33.2;
@@ -671,6 +670,7 @@ deny 193.218.118.160;
 deny 193.218.118.173;
 deny 193.218.118.178;
 deny 193.218.118.182;
+deny 193.218.118.188;
 deny 193.218.118.196;
 deny 193.218.118.38;
 deny 193.218.118.52;
@@ -993,7 +993,6 @@ deny 23.133.204.10;
 deny 23.137.248.100;
 deny 23.137.248.192;
 deny 23.137.250.83;
-deny 23.137.253.109;
 deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.137;
@@ -1076,7 +1075,6 @@ deny 2602:fc24:12:9fef::1;
 deny 2602:fc24:12:a679::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:18:f84a::1;
-deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fef9:100:1100::199;
@@ -1605,7 +1603,6 @@ deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:8140:1fff:22d0::1;
 deny 2a0d:8140:1fff:395e::1;
-deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1668,6 +1665,7 @@ deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::182;
+deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:8605:d341:b954:fc51;
 deny 2a0f:e586:f:f:9405:a52b:796f:aff2;
 deny 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
@@ -1756,7 +1754,6 @@ deny 45.130.60.248;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.137.99.10;
-deny 45.137.99.14;
 deny 45.137.99.216;
 deny 45.138.16.107;
 deny 45.138.16.113;
