--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -124,7 +124,6 @@ set_real_ip_from 109.199.101.106;
 set_real_ip_from 109.199.101.134;
 set_real_ip_from 109.199.105.142;
 set_real_ip_from 109.228.160.190;
-set_real_ip_from 109.248.11.6;
 set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
 set_real_ip_from 109.70.100.2;
@@ -152,6 +151,7 @@ set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
+set_real_ip_from 134.199.173.242;
 set_real_ip_from 135.225.96.187;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
@@ -169,6 +169,7 @@ set_real_ip_from 144.172.118.41;
 set_real_ip_from 144.172.118.55;
 set_real_ip_from 144.172.118.73;
 set_real_ip_from 146.103.33.218;
+set_real_ip_from 146.190.251.108;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
 set_real_ip_from 147.45.116.145;
@@ -190,6 +191,7 @@ set_real_ip_from 156.229.232.54;
 set_real_ip_from 156.229.232.98;
 set_real_ip_from 156.229.233.92;
 set_real_ip_from 157.180.42.50;
+set_real_ip_from 157.245.206.140;
 set_real_ip_from 158.220.123.219;
 set_real_ip_from 158.69.252.116;
 set_real_ip_from 160.119.249.240;
@@ -210,6 +212,7 @@ set_real_ip_from 162.247.74.7;
 set_real_ip_from 162.251.5.152;
 set_real_ip_from 163.172.45.102;
 set_real_ip_from 164.132.172.209;
+set_real_ip_from 164.90.131.37;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
 set_real_ip_from 171.25.193.20;
@@ -245,10 +248,12 @@ set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.65.134.61;
+set_real_ip_from 176.65.143.138;
 set_real_ip_from 176.65.144.142;
 set_real_ip_from 176.65.144.94;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 177.149.146.25;
+set_real_ip_from 178.128.160.54;
 set_real_ip_from 178.162.175.5;
 set_real_ip_from 178.162.197.91;
 set_real_ip_from 178.17.170.144;
@@ -667,14 +672,15 @@ set_real_ip_from 193.189.100.204;
 set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
 set_real_ip_from 193.218.118.133;
-set_real_ip_from 193.218.118.135;
 set_real_ip_from 193.218.118.153;
 set_real_ip_from 193.218.118.157;
 set_real_ip_from 193.218.118.160;
 set_real_ip_from 193.218.118.173;
 set_real_ip_from 193.218.118.178;
 set_real_ip_from 193.218.118.182;
+set_real_ip_from 193.218.118.188;
 set_real_ip_from 193.218.118.56;
+set_real_ip_from 193.218.118.72;
 set_real_ip_from 193.218.118.89;
 set_real_ip_from 193.237.221.228;
 set_real_ip_from 193.239.232.102;
@@ -683,7 +689,6 @@ set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
 set_real_ip_from 193.32.162.96;
 set_real_ip_from 193.36.132.21;
-set_real_ip_from 193.70.80.213;
 set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
 set_real_ip_from 194.15.115.212;
@@ -964,6 +969,7 @@ set_real_ip_from 205.185.121.177;
 set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
 set_real_ip_from 205.185.127.231;
+set_real_ip_from 206.81.25.191;
 set_real_ip_from 209.135.168.90;
 set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
@@ -1604,7 +1610,6 @@ set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:8140:1fff:22d0::1;
 set_real_ip_from 2a0d:8140:1fff:395e::1;
-set_real_ip_from 2a0d:8140:1fff:4a9a::1;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -1619,7 +1624,6 @@ set_real_ip_from 2a0d:bbc7:0:1::3cc;
 set_real_ip_from 2a0d:bbc7:0:1::3d5;
 set_real_ip_from 2a0d:bbc7:0:1::7f;
 set_real_ip_from 2a0d:c2c0:1:4::2;
-set_real_ip_from 2a0d:c580:1:3:95::1;
 set_real_ip_from 2a0e:1d80:13:51e8::1;
 set_real_ip_from 2a0e:1d80:17:6f8d::1;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1668,6 +1672,7 @@ set_real_ip_from 2a0f:df00:0:255::204;
 set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::182;
+set_real_ip_from 2a0f:e586:f:f::188;
 set_real_ip_from 2a0f:e586:f:f:8605:d341:b954:fc51;
 set_real_ip_from 2a0f:e586:f:f:9405:a52b:796f:aff2;
 set_real_ip_from 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
@@ -1757,7 +1762,6 @@ set_real_ip_from 45.130.60.248;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.99.10;
-set_real_ip_from 45.137.99.14;
 set_real_ip_from 45.137.99.216;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
@@ -1912,12 +1916,15 @@ set_real_ip_from 62.182.84.146;
 set_real_ip_from 64.190.76.2;
 set_real_ip_from 64.190.76.3;
 set_real_ip_from 64.190.76.4;
+set_real_ip_from 64.225.78.62;
+set_real_ip_from 64.227.110.29;
 set_real_ip_from 65.87.7.22;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 66.78.40.182;
 set_real_ip_from 66.78.40.73;
 set_real_ip_from 67.219.109.141;
+set_real_ip_from 68.183.200.189;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
