--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -28,7 +28,6 @@ allow 104.244.73.43;
 allow 104.244.74.229;
 allow 104.244.74.23;
 allow 104.244.74.97;
-allow 104.244.75.140;
 allow 104.244.75.74;
 allow 104.244.76.237;
 allow 104.244.77.208;
@@ -328,22 +327,6 @@ allow 185.195.236.55;
 allow 185.195.71.244;
 allow 185.207.107.130;
 allow 185.207.107.216;
-allow 185.220.100.240;
-allow 185.220.100.241;
-allow 185.220.100.242;
-allow 185.220.100.243;
-allow 185.220.100.244;
-allow 185.220.100.245;
-allow 185.220.100.246;
-allow 185.220.100.247;
-allow 185.220.100.248;
-allow 185.220.100.249;
-allow 185.220.100.250;
-allow 185.220.100.251;
-allow 185.220.100.252;
-allow 185.220.100.253;
-allow 185.220.100.254;
-allow 185.220.100.255;
 allow 185.220.101.0;
 allow 185.220.101.1;
 allow 185.220.101.10;
@@ -573,7 +556,6 @@ allow 185.84.31.254;
 allow 188.165.200.97;
 allow 188.214.104.21;
 allow 188.239.191.25;
-allow 188.245.219.108;
 allow 188.68.36.28;
 allow 188.68.41.191;
 allow 188.68.49.235;
@@ -1104,7 +1086,6 @@ allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
 allow 2605:6400:30:f04d:2605:6400:30:30;
-allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
 allow 2605:6400:30:f0ed:9151:66ed:6366:5c74;
@@ -1278,7 +1259,6 @@ allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
-allow 2a01:4f8:1c1c:b052::1;
 allow 2a01:4f9:2b:75d::124:148;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
@@ -1350,7 +1330,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:123:c6c3::1;
@@ -1399,22 +1378,6 @@ allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:7140:1:1:5054:ff:fe12:2305;
 allow 2a0b:7140:6:1:5054:ff:fed8:5956;
-allow 2a0b:f4c0:16c:10::1;
-allow 2a0b:f4c0:16c:1::1;
-allow 2a0b:f4c0:16c:11::1;
-allow 2a0b:f4c0:16c:12::1;
-allow 2a0b:f4c0:16c:13::1;
-allow 2a0b:f4c0:16c:14::1;
-allow 2a0b:f4c0:16c:15::1;
-allow 2a0b:f4c0:16c:16::1;
-allow 2a0b:f4c0:16c:2::1;
-allow 2a0b:f4c0:16c:3::1;
-allow 2a0b:f4c0:16c:4::1;
-allow 2a0b:f4c0:16c:5::1;
-allow 2a0b:f4c0:16c:6::1;
-allow 2a0b:f4c0:16c:7::1;
-allow 2a0b:f4c0:16c:8::1;
-allow 2a0b:f4c0:16c:9::1;
 allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
@@ -1598,6 +1561,7 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1750,6 +1714,7 @@ allow 45.130.60.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.99.10;
+allow 45.137.99.14;
 allow 45.137.99.216;
 allow 45.138.16.107;
 allow 45.138.16.113;
@@ -1868,14 +1833,12 @@ allow 51.89.136.168;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
 allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.218;
-allow 5.255.118.48;
 allow 5.255.121.71;
 allow 5.255.123.121;
 allow 5.255.123.158;
@@ -1942,7 +1905,6 @@ allow 82.118.248.205;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
-allow 82.221.131.86;
 allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
