--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -177,7 +177,6 @@ deny 2605:6400:30:edc3::34;
 deny 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 deny 2605:6400:30:efba:dead::;
 deny 2605:6400:30:f04d:2605:6400:30:30;
-deny 2605:6400:30:f05d:c272:5525:72b1:e64c;
 deny 2605:6400:30:f060:be62:b857:b818:9144;
 deny 2605:6400:30:f08c:45b7:4a99:a154:694e;
 deny 2605:6400:30:f0ed:9151:66ed:6366:5c74;
@@ -349,7 +348,6 @@ deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
 deny 2a01:270:9847::1;
-deny 2a01:4f8:1c1c:b052::1;
 deny 2a01:4f9:2b:75d::124:148;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
@@ -421,7 +419,6 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:123:c6c3::1;
@@ -470,22 +467,6 @@ deny 2a09:b280:fe01:61::a;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:7140:1:1:5054:ff:fe12:2305;
 deny 2a0b:7140:6:1:5054:ff:fed8:5956;
-deny 2a0b:f4c0:16c:10::1;
-deny 2a0b:f4c0:16c:1::1;
-deny 2a0b:f4c0:16c:11::1;
-deny 2a0b:f4c0:16c:12::1;
-deny 2a0b:f4c0:16c:13::1;
-deny 2a0b:f4c0:16c:14::1;
-deny 2a0b:f4c0:16c:15::1;
-deny 2a0b:f4c0:16c:16::1;
-deny 2a0b:f4c0:16c:2::1;
-deny 2a0b:f4c0:16c:3::1;
-deny 2a0b:f4c0:16c:4::1;
-deny 2a0b:f4c0:16c:5::1;
-deny 2a0b:f4c0:16c:6::1;
-deny 2a0b:f4c0:16c:7::1;
-deny 2a0b:f4c0:16c:8::1;
-deny 2a0b:f4c0:16c:9::1;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
@@ -669,6 +650,7 @@ deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:8140:1fff:22d0::1;
 deny 2a0d:8140:1fff:395e::1;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
