--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -128,7 +128,6 @@ allow 114.35.245.150;
 allow 118.163.74.160;
 allow 121.127.37.151;
 allow 121.78.28.166;
-allow 122.24.9.40;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.127.180.156;
@@ -165,6 +164,7 @@ allow 149.56.44.47;
 allow 152.32.199.79;
 allow 152.53.133.14;
 allow 152.53.53.243;
+allow 153.195.183.146;
 allow 154.16.116.61;
 allow 154.26.159.157;
 allow 154.41.95.1;
@@ -215,7 +215,6 @@ allow 172.104.243.155;
 allow 172.105.174.195;
 allow 172.232.141.150;
 allow 172.232.209.254;
-allow 172.233.57.187;
 allow 172.233.82.41;
 allow 172.234.228.174;
 allow 172.245.251.232;
@@ -328,6 +327,22 @@ allow 185.195.236.55;
 allow 185.195.71.244;
 allow 185.207.107.130;
 allow 185.207.107.216;
+allow 185.220.100.240;
+allow 185.220.100.241;
+allow 185.220.100.242;
+allow 185.220.100.243;
+allow 185.220.100.244;
+allow 185.220.100.245;
+allow 185.220.100.246;
+allow 185.220.100.247;
+allow 185.220.100.248;
+allow 185.220.100.249;
+allow 185.220.100.250;
+allow 185.220.100.251;
+allow 185.220.100.252;
+allow 185.220.100.253;
+allow 185.220.100.254;
+allow 185.220.100.255;
 allow 185.220.101.0;
 allow 185.220.101.1;
 allow 185.220.101.10;
@@ -665,6 +680,7 @@ allow 194.163.130.99;
 allow 194.163.157.49;
 allow 194.26.192.77;
 allow 194.53.137.156;
+allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.47.238.176;
@@ -1039,7 +1055,6 @@ allow 2600:3c03::f03c:95ff:fef5:a5a5;
 allow 2600:3c09::f03c:95ff:fe2d:cc40;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
-allow 2600:3c0e::f03c:95ff:feaa:89b0;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
@@ -1269,7 +1284,6 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe64:90e3;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1379,6 +1393,22 @@ allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:7140:1:1:5054:ff:fe12:2305;
 allow 2a0b:7140:6:1:5054:ff:fed8:5956;
+allow 2a0b:f4c0:16c:10::1;
+allow 2a0b:f4c0:16c:1::1;
+allow 2a0b:f4c0:16c:11::1;
+allow 2a0b:f4c0:16c:12::1;
+allow 2a0b:f4c0:16c:13::1;
+allow 2a0b:f4c0:16c:14::1;
+allow 2a0b:f4c0:16c:15::1;
+allow 2a0b:f4c0:16c:16::1;
+allow 2a0b:f4c0:16c:2::1;
+allow 2a0b:f4c0:16c:3::1;
+allow 2a0b:f4c0:16c:4::1;
+allow 2a0b:f4c0:16c:5::1;
+allow 2a0b:f4c0:16c:6::1;
+allow 2a0b:f4c0:16c:7::1;
+allow 2a0b:f4c0:16c:8::1;
+allow 2a0b:f4c0:16c:9::1;
 allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
@@ -1562,6 +1592,7 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1637,6 +1668,7 @@ allow 2a0f:e586:f:f:e356:1bda:fc05:6784;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
+allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
 allow 2a12:a800:1:1:2:58:56:233;
@@ -1696,9 +1728,6 @@ allow 37.120.239.59;
 allow 37.187.5.192;
 allow 37.187.74.97;
 allow 37.221.208.71;
-allow 37.228.129.128;
-allow 37.228.129.189;
-allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
@@ -1713,6 +1742,7 @@ allow 45.130.60.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.99.10;
+allow 45.137.99.14;
 allow 45.137.99.216;
 allow 45.138.16.107;
 allow 45.138.16.113;
@@ -1798,7 +1828,6 @@ allow 45.95.169.230;
 allow 45.95.169.24;
 allow 45.95.169.255;
 allow 46.165.243.36;
-allow 46.182.21.248;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
