--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -130,7 +130,6 @@ deny 2600:3c03::f03c:95ff:fef5:a5a5;
 deny 2600:3c09::f03c:95ff:fe2d:cc40;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
-deny 2600:3c0e::f03c:95ff:feaa:89b0;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
@@ -358,7 +357,6 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe64:90e3;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -468,6 +466,22 @@ deny 2a09:b280:fe01:61::a;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:7140:1:1:5054:ff:fe12:2305;
 deny 2a0b:7140:6:1:5054:ff:fed8:5956;
+deny 2a0b:f4c0:16c:10::1;
+deny 2a0b:f4c0:16c:1::1;
+deny 2a0b:f4c0:16c:11::1;
+deny 2a0b:f4c0:16c:12::1;
+deny 2a0b:f4c0:16c:13::1;
+deny 2a0b:f4c0:16c:14::1;
+deny 2a0b:f4c0:16c:15::1;
+deny 2a0b:f4c0:16c:16::1;
+deny 2a0b:f4c0:16c:2::1;
+deny 2a0b:f4c0:16c:3::1;
+deny 2a0b:f4c0:16c:4::1;
+deny 2a0b:f4c0:16c:5::1;
+deny 2a0b:f4c0:16c:6::1;
+deny 2a0b:f4c0:16c:7::1;
+deny 2a0b:f4c0:16c:8::1;
+deny 2a0b:f4c0:16c:9::1;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
@@ -651,6 +665,7 @@ deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:8140:1fff:22d0::1;
 deny 2a0d:8140:1fff:395e::1;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -726,6 +741,7 @@ deny 2a0f:e586:f:f:e356:1bda:fc05:6784;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
+deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
 deny 2a12:a800:1:1:2:58:56:233;
