--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -128,7 +128,6 @@ set_real_ip_from 114.35.245.150;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.127.37.151;
 set_real_ip_from 121.78.28.166;
-set_real_ip_from 122.24.9.40;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
@@ -165,6 +164,7 @@ set_real_ip_from 149.56.44.47;
 set_real_ip_from 152.32.199.79;
 set_real_ip_from 152.53.133.14;
 set_real_ip_from 152.53.53.243;
+set_real_ip_from 153.195.183.146;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.26.159.157;
 set_real_ip_from 154.41.95.1;
@@ -215,7 +215,6 @@ set_real_ip_from 172.104.243.155;
 set_real_ip_from 172.105.174.195;
 set_real_ip_from 172.232.141.150;
 set_real_ip_from 172.232.209.254;
-set_real_ip_from 172.233.57.187;
 set_real_ip_from 172.233.82.41;
 set_real_ip_from 172.234.228.174;
 set_real_ip_from 172.245.251.232;
@@ -328,6 +327,22 @@ set_real_ip_from 185.195.236.55;
 set_real_ip_from 185.195.71.244;
 set_real_ip_from 185.207.107.130;
 set_real_ip_from 185.207.107.216;
+set_real_ip_from 185.220.100.240;
+set_real_ip_from 185.220.100.241;
+set_real_ip_from 185.220.100.242;
+set_real_ip_from 185.220.100.243;
+set_real_ip_from 185.220.100.244;
+set_real_ip_from 185.220.100.245;
+set_real_ip_from 185.220.100.246;
+set_real_ip_from 185.220.100.247;
+set_real_ip_from 185.220.100.248;
+set_real_ip_from 185.220.100.249;
+set_real_ip_from 185.220.100.250;
+set_real_ip_from 185.220.100.251;
+set_real_ip_from 185.220.100.252;
+set_real_ip_from 185.220.100.253;
+set_real_ip_from 185.220.100.254;
+set_real_ip_from 185.220.100.255;
 set_real_ip_from 185.220.101.0;
 set_real_ip_from 185.220.101.1;
 set_real_ip_from 185.220.101.10;
@@ -665,6 +680,7 @@ set_real_ip_from 194.163.130.99;
 set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.53.137.156;
+set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.47.238.176;
@@ -1039,7 +1055,6 @@ set_real_ip_from 2600:3c03::f03c:95ff:fef5:a5a5;
 set_real_ip_from 2600:3c09::f03c:95ff:fe2d:cc40;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
-set_real_ip_from 2600:3c0e::f03c:95ff:feaa:89b0;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e5::104;
@@ -1269,7 +1284,6 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe64:90e3;
 set_real_ip_from 2a02:16d0:0:5::1;
-set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -1379,6 +1393,22 @@ set_real_ip_from 2a09:b280:fe01:61::a;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 set_real_ip_from 2a0b:7140:1:1:5054:ff:fe12:2305;
 set_real_ip_from 2a0b:7140:6:1:5054:ff:fed8:5956;
+set_real_ip_from 2a0b:f4c0:16c:10::1;
+set_real_ip_from 2a0b:f4c0:16c:1::1;
+set_real_ip_from 2a0b:f4c0:16c:11::1;
+set_real_ip_from 2a0b:f4c0:16c:12::1;
+set_real_ip_from 2a0b:f4c0:16c:13::1;
+set_real_ip_from 2a0b:f4c0:16c:14::1;
+set_real_ip_from 2a0b:f4c0:16c:15::1;
+set_real_ip_from 2a0b:f4c0:16c:16::1;
+set_real_ip_from 2a0b:f4c0:16c:2::1;
+set_real_ip_from 2a0b:f4c0:16c:3::1;
+set_real_ip_from 2a0b:f4c0:16c:4::1;
+set_real_ip_from 2a0b:f4c0:16c:5::1;
+set_real_ip_from 2a0b:f4c0:16c:6::1;
+set_real_ip_from 2a0b:f4c0:16c:7::1;
+set_real_ip_from 2a0b:f4c0:16c:8::1;
+set_real_ip_from 2a0b:f4c0:16c:9::1;
 set_real_ip_from 2a0b:f4c2::;
 set_real_ip_from 2a0b:f4c2::1;
 set_real_ip_from 2a0b:f4c2::10;
@@ -1562,6 +1592,7 @@ set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:8140:1fff:22d0::1;
 set_real_ip_from 2a0d:8140:1fff:395e::1;
+set_real_ip_from 2a0d:8140:1fff:4a9a::1;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -1637,6 +1668,7 @@ set_real_ip_from 2a0f:e586:f:f:e356:1bda:fc05:6784;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
+set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:a800:1:1:194:26:192:77;
 set_real_ip_from 2a12:a800:1:1:2:58:56:220;
 set_real_ip_from 2a12:a800:1:1:2:58:56:233;
@@ -1696,9 +1728,6 @@ set_real_ip_from 37.120.239.59;
 set_real_ip_from 37.187.5.192;
 set_real_ip_from 37.187.74.97;
 set_real_ip_from 37.221.208.71;
-set_real_ip_from 37.228.129.128;
-set_real_ip_from 37.228.129.189;
-set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
@@ -1713,6 +1742,7 @@ set_real_ip_from 45.130.60.248;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.99.10;
+set_real_ip_from 45.137.99.14;
 set_real_ip_from 45.137.99.216;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
@@ -1798,7 +1828,6 @@ set_real_ip_from 45.95.169.230;
 set_real_ip_from 45.95.169.24;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.165.243.36;
-set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
